--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 1280px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -39,4 +39,13 @@
 
 .read-the-docs {
   color: #888;
+}
+
+
+#page-title {
+  text-align: left;
+}
+
+main {
+  width: 100%;
 }
