Update interface, fixed some issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 #root {
-  max-width: 1200px;
+  /* min-width: 800px;
+  max-width: 1200px; */
+  width: 900px;
   margin: auto;
   text-align: center;
 }
